Fixed gchart width on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1641,6 +1641,11 @@ input, select, textarea {
 			width: 100%;
 			margin: 0 0 2em 0;
 		}
+		
+		.image.gchart {
+			max-width: 100%;
+			height: auto;
+		}
 
 		.image.left {
 			float: left;
